# WebZjs

./: .gitignore  Cargo.toml
crates/webzjs-wallet/src/: lib.rs  wallet.rs
crates/zcash-client/: .env  .env.example  Cargo.toml
crates/zcash-client/src/: main.rs
